Use ContainerSupport for building containerized native image bundles